test create ProductOperation.java
add lib javaFX
add data/figure
add data/products.txt
add ProductOperation.java ( đang bị lỗi thư viện javaFX chưa fix được )
add README.md